[tool.poetry]
name = "camunda_client"
version = "0.1.0"
description = ""
authors = ["asyncee <asyncee@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.15.4"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
mypy-extensions = "^0.4.3"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
